# GayBoy

./: .gitignore  CMakeLists.txt  README.md  gameboy.cpp  gameboy.hpp  main.cpp
SFML/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  gameboy.cpp  gameboy.hpp  load.cpp  powerup.cpp
lib/include/: gayboy.hpp
